--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div id="links">
         <a
-            href="https://web.archive.org/web/20250420110828/https://www.ksl.com/article/51297199/utah-judge-resigns-after-accusations-of-sexual-abuse-sharing-weed-pen">Utah
+            href="https://www.ksl.com/article/51297199/utah-judge-resigns-after-accusations-of-sexual-abuse-sharing-weed-pen">Utah
             judge resigns</a>
 
     </div>
